fix(fem): fix schedule of fem deletion requests